# GT-Challenge

./: Makefile  README.md  dockerfile
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: app.env  main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: database.py
backend/app/models/: infraction.py  officer.py  person.py  vehicle.py
backend/app/routers/: infractions.py  login.py  officers.py  persons.py  report.py  vehicles.py
backend/app/schemas/: infraction.py  officer.py  person.py  vehicle.py
backend/app/services/: CRUD_base.py  infraction_service.py  officer_service.py  person_service.py  vehicle_service.py
backend/app/templates/: home.html  login.html  officer.html  person.html  vehicle.html
backend/app/templates/partial/officer/: add_officer.html  edit_officer.html  officer_list.html  officer_row.html
backend/app/templates/partial/person/: add_person.html  edit_person.html  person_list.html  person_row.html
backend/app/templates/partial/vehicle/: add_vehicle.html  edit_vehicle.html  vehicle_list.html  vehicle_row.html
backend/app/tests/unit_test/: conftest.py
backend/app/tests/unit_test/core/: deps_test.py  security_test.py
backend/app/tests/unit_test/services/: infraction_service_test.py  officer_service_test.py  person_service_test.py  vehicle_service_test.py
backend/app/views/: home_view.py  login_view.py  officer_view.py  persons_view.py  vehicle_view.py
